# CTEVT

./: learn_selenium.py
Form_Processing/: README.md  fix_size.py  pdf_to_img.py  process_images.py  process_images_ver2.py  process_images_ver3.py  rename.py  requirements.txt  resize_photo.py  test.ipynb  yolo_detect.ipynb
NSTB/: download_all_files.py  download_counseling.py  marks.csv  percentage.csv  result.csv  result.ipynb
NSTB/Form_Processing/: .gitignore  process_images_ver3.py  pyproject.toml  rename.py
Reports/: approved_stats_2080_2081.csv  diploma_year_stats.xlsx  file.enc  institutes_by_type_and_program.xlsx  process_df.ipynb  reg_data_final.xlsx
Reports/csv_outputs/: dip 1st.csv  dip 2nd.csv  dip 3rd.csv  pre 2081.csv  pre 2082.csv
Reports/processed_stats/: diploma_2080_stats.csv  diploma_2081_stats.csv  merged_diploma_stats_2080_2081.csv
